<resources>
    <string name="app_name">SLAPC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario no registrado</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio de sesión</string>
    <string name="menu_gallery">Registro</string>
    <string name="menu_admin">Menú del administrador</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="agregar_armado">Agregar armado</string>
    <string name="salir_admin">Salir de administrador</string>

    <string name="default_category_label">Categoría del armado</string>
    <string-array name="categories">
        <item>Categoría del armado</item>  <!-- Esta es la opción predeterminada no seleccionable, no cambiar sin tomar eso en cuenta jdfns -->
        <item>Gaming</item>
        <item>Oficina</item>
        <item>Doméstico</item>
    </string-array>

    <string name="select_motherboard">Seleccione placa madre</string>
    <string name="select_power_supply">Seleccione fuente de poder</string>
    <string name="select_ram">Seleccione memoria RAM</string>
    <string name="select_storage">Seleccione almacenamiento</string>
    <string name="select_processor">Seleccione procesador</string>
    <string name="select_cabinet">Seleccione gabinete</string>
    <string name="select_graphics_card">Seleccione tarjeta gráfica</string>

    <string name="categoria">Categoría</string>
    <string name="detalles_tecnicos">Detalles técnicos</string>
    <string name="imagen">Imagen</string>
    <string name="nombre">Nombre</string>
    <string name="panel_componentes">Panel de componentes</string>
    <string name="precio">Precio</string>
    <string name="salir">Salir</string>

    <string name="crear_armado">Creando un armado</string>"
    <string name="nombre_armado">Nombre del armado</string>
    <string name="descuento">Descuento (%)</string>
    <string name="descripcion">Descripción</string>
    <string name="placa_madre">Placa madre</string>
    <string name="fuente_poder">Fuente de poder</string>
    <string name="RAM">RAM</string>
    <string name="almacenamiento">Almacenamiento</string>
    <string name="procesador">Procesador</string>
    <string name="gabinete">Gabinete</string>
    <string name="tarjeta_grafica">Tarjeta gráfica (opcional)</string>

    <string name="agregar">Agregar</string>
    <string name="borrar">Borrar</string>
    <string name="buscar">Buscar</string>


    <string-array name="categorias_componentes">
        <item>CPU</item>
        <item>Almacenamiento</item>
        <item>Monitor</item>
        <item>Mouse</item>
        <item>Teclado</item>
        <item>RAM</item>
        <item>Fuente de Poder</item>
        <item>Gabinete</item>
        <item>Tarjeta Gráfica</item>
        <item>Placa Madre</item>
    </string-array>


    <string name="catalogo_prin">Catálogo de productos</string>
    <string name="pedidos_prin">Mis Pedidos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>