<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.slapc.ui.login.LoginFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.slapc.ui.register.RegisterFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/nav_admin_menu"
        android:name="com.example.slapc.ui.admin.AdminMenuFragment"
        android:label="@string/menu_admin"
        tools:layout="@layout/fragment_admin_menu" />
    <fragment
        android:id="@+id/nav_catalogo"
        android:name="com.example.slapc.ui.catalogo.CatalogoFragment"
        android:label="@string/catalogo_prin"
        tools:layout="@layout/fragment_catalogo" />
    <fragment
        android:id="@+id/nav_detalles_comp"
        android:name="com.example.slapc.ui.detalles.ProductDetailsFragment"
        android:label="@string/catalogo_prin"
        tools:layout="@layout/fragment_product_details" />

</navigation>