<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CRUDComponentesActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/panel_componentes"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtCompNombre"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/edtCompImagen"
        android:layout_width="283dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/imagen"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCompNombre" />

    <EditText
        android:id="@+id/edtCompPrecio"
        android:layout_width="281dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/precio"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCompImagen" />

    <EditText
        android:id="@+id/edtCompDetalles"
        android:layout_width="287dp"
        android:layout_height="100dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/detalles_tecnicos"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCompPrecio" />

    <Spinner
        android:id="@+id/spnCompCategoria"
        android:layout_width="281dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/categoria"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/edtCompDetalles"
        app:layout_constraintTop_toBottomOf="@+id/edtCompDetalles" />

    <Button
        android:id="@+id/btnCompSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/salir"
        app:layout_constraintStart_toStartOf="@+id/spnCompCategoria"
        app:layout_constraintTop_toBottomOf="@+id/spnCompCategoria" />

    <ImageButton
        android:id="@+id/ibtnCompGuardar"
        android:layout_width="58dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/btnCompSalir"
        app:layout_constraintTop_toTopOf="@+id/btnCompSalir"
        app:srcCompat="@drawable/baseline_save_24" />

    <ImageButton
        android:id="@+id/ibtnCompBuscar"
        android:layout_width="52dp"
        android:layout_height="54dp"
        android:src="@drawable/baseline_search_24"
        app:layout_constraintEnd_toStartOf="@+id/ibtnCompBorrar"
        app:layout_constraintStart_toEndOf="@+id/ibtnCompGuardar"
        app:layout_constraintTop_toTopOf="@+id/btnCompSalir" />

    <ImageButton
        android:id="@+id/ibtnCompBorrar"
        android:layout_width="56dp"
        android:layout_height="52dp"
        android:src="@drawable/baseline_delete_24"
        app:layout_constraintEnd_toEndOf="@+id/spnCompCategoria"
        app:layout_constraintTop_toTopOf="@+id/btnCompSalir" />

</androidx.constraintlayout.widget.ConstraintLayout>